--- a/app/.vitepress/theme/custom.css
+++ b/app/.vitepress/theme/custom.css
@@ -9,10 +9,16 @@
   --vp-c-brand-3: #b2006d;
 
 
-  --vp-home-hero-name-color: #ff349f;
+  /* --vp-home-hero-name-color: #ff349f; */
 
   /* --vp-home-hero-image-background-image: linear-gradient( -45deg, #888888 50%, #ff349f 50% ); */
   /* --vp-home-hero-image-filter: blur(68px); */
 
 
+}
+
+::selection {
+  background-color: #ff349f;
+  color: #ffffff;
+  -webkit-text-fill-color: #ffffff;
 }
